--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,15 +6,16 @@ on:
       - main
 
 jobs:
-  run_script:
+  read-input:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Prompt user for input value
-      run: echo ::set-output name=input_value::$(read -p "Enter the input value: " val && echo $$val)
-
-    - name: Run script
-      run: python main.py ${{ steps.prompt.outputs.input_value }}
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install openpyxl
+        run: pip install openpyxl
+      - name: Run main.py
+        run: python main.py
