--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install dependencies
-      run: pip install openpyxl
+    - name: Checkout code
+      uses: actions/checkout@v3
     - name: Run script
       run: python main.py A1
+      working-directory: /path/to/script
+   
